--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Done Add Space Schema",
+  "name": "Cornerstone Done Schema",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
