--- a/config.json
+++ b/config.json
@@ -156,6 +156,8 @@
     "button--default-borderColor": "#8F8F8F",
     "button--default-borderColorHover": "#474747",
     "button--default-borderColorActive": "#757575",
+    "button--default-backgroundColor": "#ff5100",
+    "button--default-backgroundColorHover": "#ff5100",
     "button--primary-color": "#ffffff",
     "button--primary-colorHover": "#ffffff",
     "button--primary-colorActive": "#ffffff",
@@ -476,15 +478,15 @@
         "default_image_brand": "img/BrandDefault.gif",
         "default_image_product": "img/ProductDefault.gif",
         "default_image_gift_certificate": "img/GiftCertificate.png",
-        "body-font": "Google_Karla_400",
-        "headings-font": "Google_Montserrat_400",
+        "body-font": "Google_Poppins_400",
+        "headings-font": "Google_Poppins_400",
         "fontSize-root": 14,
-        "fontSize-h1": 28,
-        "fontSize-h2": 25,
-        "fontSize-h3": 22,
-        "fontSize-h4": 20,
+        "fontSize-h1": 49,
+        "fontSize-h2": 30,
+        "fontSize-h3": 24,
+        "fontSize-h4": 16,
         "fontSize-h5": 15,
-        "fontSize-h6": 13,
+        "fontSize-h6": 14,
         "applePay-button": "black",
         "color-textBase": "#333333",
         "color-textBase--hover": "#757575",
@@ -495,7 +497,7 @@
         "color-textLink": "#333333",
         "color-textLink--hover": "#757575",
         "color-textLink--active": "#757575",
-        "color-textHeading": "#444444",
+        "color-textHeading": "#232323",
         "color-primary": "#757575",
         "color-primaryDark": "#666666",
         "color-primaryDarker": "#333333",
@@ -523,16 +525,18 @@
         "color-greyLighter": "#cccccc",
         "color-greyLightest": "#e5e5e5",
         "banner--deafault-backgroundColor": "#707070",
-        "button--default-color": "#666666",
+        "button--default-color": "#232323",
         "button--default-colorHover": "#333333",
         "button--default-colorActive": "#000000",
         "button--default-borderColor": "#8F8F8F",
+        "button--default-backgroundColor": "#ff5100",
+        "button--default-backgroundColorHover": "#ff5100",
         "button--default-borderColorHover": "#474747",
         "button--default-borderColorActive": "#757575",
         "button--primary-color": "#ffffff",
         "button--primary-colorHover": "#ffffff",
         "button--primary-colorActive": "#ffffff",
-        "button--primary-backgroundColor": "#444444",
+        "button--primary-backgroundColor": "#232323",
         "button--primary-backgroundColorHover": "#666666",
         "button--primary-backgroundColorActive": "#000000",
         "button--disabled-color": "#ffffff",
