--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Add Default Done",
+  "name": "Cornerstone Header Part 3",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
@@ -88,7 +88,7 @@
     "show_product_dimensions": false,
     "show_product_swatch_names": true,
     "product_list_display_mode": "grid",
-    "logo-position": "center",
+    "logo-position": "left",
     "logo_size": "250x100",
     "logo_fontSize": 28,
     "brand_size": "190x250",
@@ -376,6 +376,11 @@
     "afterpay-button-color": "black-mint",
     "amazon-button-color": "Gold",
     "masterpass-button-color": "black",
+    "header-top-left-1": "TRADE PROFESSIONAL APPLICATION",
+    "header-top-left-2": "01294 311066",
+    "header_top_bg": "#000000",
+    "header_top_color": "#ffffff",
+    "header_top_colorHover": "#ff5100",
     "paymentbuttons-provider-sorting": [
 
     ]
@@ -463,7 +468,7 @@
         "show_product_dimensions": false,
         "show_product_swatch_names": true,
         "product_list_display_mode": "grid",
-        "logo-position": "center",
+        "logo-position": "left",
         "logo_size": "250x100",
         "logo_fontSize": 28,
         "brand_size": "190x250",
@@ -608,7 +613,7 @@
         "pace-progress-backgroundColor": "#999999",
         "spinner-borderColor-dark": "#999999",
         "spinner-borderColor-light": "#ffffff",
-        "hide_content_navigation": false,
+        "hide_content_navigation": true,
         "optimizedCheckout-header-backgroundColor": "#f5f5f5",
         "optimizedCheckout-show-backgroundImage": false,
         "optimizedCheckout-backgroundImage": "",
@@ -751,6 +756,11 @@
         "afterpay-button-color": "black-mint",
         "amazon-button-color": "Gold",
         "masterpass-button-color": "black",
+        "header-top-left-1": "TRADE PROFESSIONAL APPLICATION",
+        "header-top-left-2": "01294 311066",
+        "header_top_bg": "#000000",
+        "header_top_color": "#ffffff",
+        "header_top_colorHover": "#ff5100",
         "paymentbuttons-provider-sorting": [
 
         ]
