--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Header Part 4",
+  "name": "Cornerstone Header Part 4 - Start Mega Menu Style",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
