--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Header Part 4 - Done Mega Menu CSS Part 1",
+  "name": "Cornerstone Header Part 4 - Done Mega Menu CSS Part 2",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
@@ -597,7 +597,9 @@
         "navUser-dropdown-borderColor": "#cccccc",
         "navUser-indicator-backgroundColor": "#333333",
         "navPages-color": "#232323",
+        "navPages-color-2": "#ffffff",
         "navPages-color-hover": "#ffffff",
+        "navPages-color-2-hover": "#ff5100",
         "navPages-subMenu-backgroundColor": "#e5e5e5",
         "navPages-subMenu-separatorColor": "#cccccc",
         "dropdown--quickSearch-backgroundColor": "#e5e5e5",
