--- a/config.json
+++ b/config.json
@@ -47,6 +47,7 @@
     "hide_breadcrumbs": false,
     "hide_page_heading": false,
     "hide_category_page_heading": false,
+    "show-header-top": true,
     "hide_blog_page_heading": false,
     "hide_contact_us_page_heading": false,
     "homepage_new_products_count": 5,
@@ -427,6 +428,7 @@
         "hide_breadcrumbs": false,
         "hide_page_heading": false,
         "hide_category_page_heading": false,
+        "show-header-top": true,
         "hide_blog_page_heading": false,
         "hide_contact_us_page_heading": false,
         "homepage_new_products_count": 5,
