--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Header Part 4 - Done Mega Menu CSS Part 2",
+  "name": "Cornerstone Done Header No Test",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
