--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Done Footer No Test",
+  "name": "Cornerstone Home Part 1",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
@@ -480,6 +480,17 @@
         "brand_size": "190x250",
         "gallery_size": "300x300",
         "productgallery_size": "500x659",
+        "homepage_show_carousel_0_subheading": "New Collection",
+        "homepage_show_carousel_0_mobile-image": "slider-01-mb.png",
+        "homepage_show_carousel_0_position-content": "center",
+        "homepage_show_carousel_1_mobile-image": "",
+        "homepage_show_carousel_1_position-content": "left",
+        "homepage_show_carousel_2_mobile-image": "",
+        "homepage_show_carousel_2_position-content": "right",
+        "homepage_show_carousel_3_mobile-image": "",
+        "homepage_show_carousel_3_position-content": "left",
+        "homepage_show_carousel_4_mobile-image": "",
+        "homepage_show_carousel_4_position-content": "center",
         "product_size": "500x659",
         "productview_thumb_size": "50x50",
         "productthumb_size": "100x100",
