Done Add CSS for Block Product

--- a/config.json
+++ b/config.json
@@ -432,7 +432,7 @@
         "hide_breadcrumbs": false,
         "hide_page_heading": false,
         "home_product_custom_block_1_list_id": "107,104,111,97,98",
-        "products_block_listID_1_title": "Best Seller",
+        "products_block_listID_1_title": "Best Sellers",
         "hide_category_page_heading": false,
         "show-header-top": true,
         "hide_blog_page_heading": false,
