--- a/config.json
+++ b/config.json
@@ -386,6 +386,7 @@
     "header_top_color": "#ffffff",
     "header_top_colorHover": "#ff5100",
     "header-background-color": "#ff5100",
+    "recent_blog_size": "570x470",
     "paymentbuttons-provider-sorting": [
 
     ]
@@ -436,6 +437,7 @@
         "hide_category_page_heading": false,
         "show-header-top": true,
         "hide_blog_page_heading": false,
+        "recent_blog_size": "570x470",
         "hide_contact_us_page_heading": false,
         "homepage_new_products_count": 5,
         "homepage_featured_products_count": 4,
@@ -512,9 +514,9 @@
         "fontSize-h5": 15,
         "fontSize-h6": 14,
         "applePay-button": "black",
-        "color-textBase": "#333333",
-        "color-textBase--hover": "#757575",
-        "color-textBase--active": "#757575",
+        "color-textBase": "#232323",
+        "color-textBase--hover": "#232323",
+        "color-textBase--active": "#232323",
         "color-textSecondary": "#757575",
         "color-textSecondary--hover": "#333333",
         "color-textSecondary--active": "#333333",
