Done Home No Effect

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Home Part 1",
+  "name": "Cornerstone Done Home No Effect",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
@@ -552,18 +552,18 @@
         "color-greyLightest": "#e5e5e5",
         "banner--deafault-backgroundColor": "#707070",
         "button--default-color": "#232323",
-        "button--default-colorHover": "#333333",
-        "button--default-colorActive": "#000000",
+        "button--default-colorHover": "#ffffff",
+        "button--default-colorActive": "#ffffff",
         "button--default-borderColor": "#8F8F8F",
         "button--default-backgroundColor": "#ff5100",
-        "button--default-backgroundColorHover": "#ff5100",
+        "button--default-backgroundColorHover": "#E9540D",
         "button--default-borderColorHover": "#474747",
         "button--default-borderColorActive": "#757575",
         "button--primary-color": "#ffffff",
-        "button--primary-colorHover": "#ffffff",
-        "button--primary-colorActive": "#ffffff",
+        "button--primary-colorHover": "#010101",
+        "button--primary-colorActive": "#010101",
         "button--primary-backgroundColor": "#232323",
-        "button--primary-backgroundColorHover": "#666666",
+        "button--primary-backgroundColorHover": "#C8C9C8",
         "button--primary-backgroundColorActive": "#000000",
         "button--disabled-color": "#ffffff",
         "button--disabled-backgroundColor": "#cccccc",
