Done Home Page No Fix Mega Menu

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Done Home No Effect",
+  "name": "Cornerstone Done Home Page",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
