--- a/config.json
+++ b/config.json
@@ -434,7 +434,7 @@
         "hide_page_heading": false,
         "home_product_custom_block_1_list_id": "107,104,111,97,98",
         "products_block_listID_1_title": "Best Sellers",
-        "hide_category_page_heading": false,
+        "hide_category_page_heading": true,
         "show-header-top": true,
         "hide_blog_page_heading": false,
         "recent_blog_size": "570x470",
