Done Grid/List Layout

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "foundation-sites": "^5.5.3",
     "jquery": "^3.6.1",
     "jstree": "^3.3.12",
+    "classie": "^1.0.0",
     "lazysizes": "5.2.2",
     "lodash": "^4.17.21",
     "nod-validate": "^2.0.12",
