Start Add B2B Code

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Category Part 1",
+  "name": "Cornerstone All Pages",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
