Done Add Bundle B2B

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone All Pages",
+  "name": "Cornerstone Done B2B",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
