Done Home Settings

--- a/config.json
+++ b/config.json
@@ -358,6 +358,7 @@
     "paymentbanners-proddetailspage-ratio": "8x1",
     "paymentbuttons-container": "medium",
     "home_product_custom_block_1_list_id": "113,114,115,116,117",
+    
     "supported_card_type_icons": [
       "american_express",
       "diners_club",
@@ -816,6 +817,35 @@
         "custom_ask_an_expert_desc3": "Please answer the following questionnaire",
         "custom_ask_an_expert_mailto": "team101@tygrisindustrial.com",
         "custom_ask_an_expert_subject_mail": "Ask An Expert",
+        "belowCarousel_banner_title": "GREASE FINDER",
+        "belowCarousel_banner_text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ut enim ad .",
+        "belowCarousel_button_text": "Grease Finder",
+        "belowCarousel_button_link": "#",
+        "home_section_4_banner_item_1_image": "cat-banner1.jpg",
+        "home_section_4_banner_item_1_link": "#",
+        "home_section_4_banner_item_2_image": "cat-banner2.jpg",
+        "home_section_4_banner_item_2_link": "#",
+        "home_section_4_banner_item_3_image": "cat-banner3.jpg",
+        "home_section_4_banner_item_3_link": "#",
+        "home_section_4_banner_item_4_image": "cat-banner4.jpg",
+        "home_section_4_banner_item_4_link": "#",
+        "home_2_banner_title":"Deals of the Month",
+        "home_2_banner_item1_image": "section-slick-banner-image.png",
+        "home_2_banner_item1_link": "#",
+        "home_2_banner_item2_image": "section-slick-banner-image.png",
+        "home_2_banner_item2_link": "#",
+        "home_2_banner_item3_image": "section-slick-banner-image.png",
+        "home_2_banner_item3_link": "#",
+        "global_banner_bg": "orange-bg.jpg",
+        "global_banner_heading": "Free Technical Audit",
+        "global_banner_text": "Our technical team can offer application specific recommendations based on your individual requirements",
+        "global_banner_button": "FIND OUT MORE",
+        "global_banner_link": "#",
+        "home_blog_title": "TYGRIS ACADEMY",
+        "home_blog_description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ut enim ad .",
+        "global_testimonial_heading": "What people are saying",
+        "global_testimonial_item_1": "Lorem ipsum dolor sit amet, consectetur adipiscing eiusmod tempor incididunt ut labore et dolore ut.",
+        "global_testimonial_item_2": "Lorem ipsum dolor sit amet, consectetur adipiscing eiusmod tempor incididunt ut labore et dolore ut.",
         "paymentbuttons-provider-sorting": [
 
         ]
