Done Change Some Layout

--- a/config.json
+++ b/config.json
@@ -117,9 +117,9 @@
     "color-textBase": "#333333",
     "color-textBase--hover": "#757575",
     "color-textBase--active": "#757575",
-    "color-textSecondary": "#757575",
-    "color-textSecondary--hover": "#333333",
-    "color-textSecondary--active": "#333333",
+    "color-textSecondary": "#232323",
+    "color-textSecondary--hover": "#ff5100",
+    "color-textSecondary--active": "#ff5100",
     "color-textLink": "#333333",
     "color-textLink--hover": "#757575",
     "color-textLink--active": "#757575",
@@ -520,14 +520,14 @@
         "color-textBase": "#232323",
         "color-textBase--hover": "#232323",
         "color-textBase--active": "#232323",
-        "color-textSecondary": "#757575",
-        "color-textSecondary--hover": "#333333",
-        "color-textSecondary--active": "#333333",
-        "color-textLink": "#333333",
-        "color-textLink--hover": "#757575",
-        "color-textLink--active": "#757575",
+        "color-textSecondary": "#2323223",
+        "color-textSecondary--hover": "#ff5100",
+        "color-textSecondary--active": "#ff5100",
+        "color-textLink": "#232323",
+        "color-textLink--hover": "#ff5100",
+        "color-textLink--active": "#ff5100",
         "color-textHeading": "#232323",
-        "color-primary": "#757575",
+        "color-primary": "#232323",
         "color-primaryDark": "#666666",
         "color-primaryDarker": "#333333",
         "color-primaryLight": "#999999",
