Done Custom Theme

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Done B2B",
+  "name": "Cornerstone Done Custom",
   "version": "6.12.0",
   "template_engine": "handlebars_v4",
   "meta": {
@@ -790,22 +790,22 @@
         "header_top_bg": "#000000",
         "header_top_color": "#ffffff",
         "header_top_colorHover": "#ff5100",
-        "megamenu_item1": 1,
+        "megamenu_item1": "1",
         "megamenu_item1_img":"mega-menu-image-1.png",
         "megamenu_item1_link":"#",
-        "megamenu_item2": 2,
+        "megamenu_item2": "2",
         "megamenu_item2_img":"",
         "megamenu_item2_link":"#",
-        "megamenu_item3": 3,
+        "megamenu_item3": "3",
         "megamenu_item3_img":"",
         "megamenu_item3_link":"#",
-        "megamenu_item4": 4,
+        "megamenu_item4": "4",
         "megamenu_item4_img":"",
         "megamenu_item4_link":"#",
-        "megamenu_item5": 5,
+        "megamenu_item5": "5",
         "megamenu_item5_img":"",
         "megamenu_item5_link":"#",
-        "megamenu_item6": 6,
+        "megamenu_item6": "6",
         "megamenu_item6_img":"",
         "megamenu_item6_link":"#",
         "header-background-color": "#ff5100",
